2010-06-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Flush uncommitted tests

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* Tests.Rules.Performance.csproj: Fix unit tests for solution
	(non makefile) builds

2010-05-24  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnsealedConcreteAttributesTest.cs:
	* AvoidUnusedParametersTest.cs:
	* GlobalSuppressions.cs:
		Add FxCop compatibility unit tests

2010-05-13  Antoine Vandecreme  <avandecreme@sopragroup.com>

	* ReviewLinqMethodTest.cs: Add tests cases where a method use
	Count() instead of Any() in conditions

2010-04-28  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnusedParametersTest.cs: Add test case where a method
	is decorated with a [Conditional("X")] attribute

2010-04-27  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs: Add test case where a method
	is decorated with a [Conditional("X")] attribute
	* AvoidUninstantiatedInternalClassesTest.cs: Add test case for
	NamespaceDoc

2010-04-18  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUncalledPrivateCodeTest.cs
	* ConsiderCustomAccessorsForNonVisibleEventsTest.cs:
		With newer CSC (e.g. 10.0) we cannot assume the event
		accessor to be auto-generated by the presence of 
		IsSynchronized. Fix unit test when compiled with CSC

2010-01-17  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRepetitiveCallsToPropertiesTest.cs: Add test case with a
	long message chain.

2010-01-17  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidConcatenatingCharsTest.cs: New. Unit tests for
	AvoidConcatenatingCharsRule

2010-01-10  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidRepetitiveCallsToPropertiesTest.cs: New. Unit tests for
	AvoidRepetitiveCallsToPropertiesRule

2010-01-03  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidLocalDataStoreSlotTest.cs: New. Unit tests for
	AvoidLocalDataStoreSlotRule

2009-05-14  Jb Evain  <jbevain@novell.com>
